update: swagger and add doctor api
