# config/swagger.json
@@ -17,9 +17,6 @@
     },
     {
       "name": "Doctor"
-    },
-    {
-      "name": "Examination"
     }
   ],
   "consumes": [
@@ -450,6 +447,66 @@
           "Admin"
         ]
       }
+    },
+    "/api/doctors/{id}": {
+      "get": {
+        "summary": "Get Doctor data By Id",
+        "description": "Retrieve doctor data by Id",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coreDoctor"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [{
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "format": "int64"
+        }],
+        "tags": [
+          "Doctor"
+        ]
+      }
+    },
+    "/api/doctors": {
+      "get": {
+        "summary": "Get All Doctors",
+        "description": "Can Get Doctors, But Can not Edit and Delete",
+        "security": [{
+          "BearerTokenAuth": []
+        }],
+        "responses": {
+          "200": {
+            "description": "Berhasil ditampilkan",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/coreDoctor"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Doctor"
+        ]
+      }
     }
   },
   "definitions": {
@@ -747,6 +804,29 @@
         },
         "gender": {
           "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "coreDoctor": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "specialistId": {
+          "type": "integer"
         },
         "createdAt": {
           "type": "string",
